# vel0city

./: .gitignore  Cargo.toml  README  build.rs  netcode.capnp  testbsp.json  winlink.bat
.cargo/: config
assets/: fragment.glsl  test.bsp  vertex.glsl
src/: .lib.rs.swp  assets.rs  bsp.rs  input.rs  lib.rs  map.rs  particle.rs  qbsp_import.rs  settings.rs
src/graphics/: hud.rs  mod.rs  passes.rs  postprocess.rs  wavefront.rs
src/player/: mod.rs  movement.rs
vel0city_base/: Cargo.toml
vel0city_base/src/: assets.rs
vel0city_graphics/: Cargo.toml
vel0city_graphics/src/: hud.rs  lib.rs  passes.rs  wavefront.rs
vel0city_map/: Cargo.toml
vel0city_map/src/: bsp.rs  lib.rs  q3_import.rs
