[package]
name = "vel0city"
version = "0.0.1"
#build = "build.rs"

[profile.release]
opt-level = 3 
debug = true 
rpath = false
lto = false 

[dependencies.wavefront_obj]
git = "https://github.com/PistonDevelopers/wavefront_obj"

[dependencies.glium]
git = "https://github.com/tomaka/glium"
features = ["nalgebra", "image", "headless"]

[dependencies.glium_macros]
git = "https://github.com/tomaka/glium"

[dependencies.image]
version = "*"

[dependencies]
clock_ticks = "*"
byteorder = "*"
bitflags = "*"
glutin = "*"
nalgebra = "*"
rustc-serialize = "*"
