[package]
name = "vel0city"
version = "0.0.1"
#build = "build.rs"

[profile.release]
opt-level = 3 
debug = true 
rpath = false
lto = false 

[dependencies]
clock_ticks = "*"
byteorder = "*"
bitflags = "*"
glutin = "*"
nalgebra = "*"
rustc-serialize = "*"
glium = "*"
image = "*"

[dependencies.vel0city_map]
path = "vel0city_map"

[dependencies.vel0city_base]
path = "vel0city_base"

[dependencies.vel0city_graphics]
path = "vel0city_graphics"
